Changed the minimum height of the collapser, fixed styling bug in the rename dialog, changed the notebook cell colors and borders to be compliant to material design, changed the font family of the cell in and out prompt (still playing around with it), changed the right margin of tab icons to be 4px instead of 2

--- a/packages/imageviewer/style/index.css
+++ b/packages/imageviewer/style/index.css
@@ -7,12 +7,26 @@
 .jp-ImageViewer {
   overflow: auto;
 }
+
+
 .jp-ImageViewer > div {
   transform-origin: top left;
 }
+
 
 .jp-ImageViewer img {
   max-width: 100%;
   max-height: 100%;
   margin: auto;
+}
+
+
+.jp-ImageViewer::before {
+    content: '';
+    display: block;
+    height: var(--jp-toolbar-micro-height);
+    background: var(--jp-toolbar-background);
+    border-bottom: 1px solid var(--jp-toolbar-border-color);
+    box-shadow: var(--jp-toolbar-box-shadow);
+    z-index: 10;
 }
